@@ -15,7 +15,13 @@ module WWW
         def handle(ctx, params)
           uri       = params[:uri]
           http_obj  = params[:connection]
-          if uri.scheme == 'https' && ! http_obj.started? && ! http_obj.frozen?
+
+          ssl = nil
+          if http_obj.instance_variable_defined?(:@ssl_context)
+            http_obj.instance_variable_get(:@ssl_context)
+          end
+
+          if uri.scheme == 'https' && ! http_obj.started? && ! ssl.frozen?
             http_obj.use_ssl = true
             http_obj.verify_mode = OpenSSL::SSL::VERIFY_NONE
             if @ca_file
