@@ -11,6 +11,7 @@
     RF #24693
   * Fixed string encoding in ruby 1.9.  RF #2433
   * Rescuing Zlib::DataErrors (Thanks Kelley Reynolds)
+  * Fixing a problem with frozen SSL objects.  RF #24950
 
 === 0.9.2 / 2009/03/05
 
